Threshold penalty in stats

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 							'Round<br>Time': { 'data':getRoundDuration, 'align':'center'},
 							'Payout': { 'data':getPayout, 'color':getColor, 'align':'center' },
 							'Efficiency': { 'data':getEfficiency, 'color':getColor, 'align':'center' },
-							'Penalty': { 'data':getPenalty, 'color':getColor, 'align':'center' },
+							'ThrPenalty': { 'data':getPenalty, 'color':getColor, 'align':'center' },
 							'LP Penalty': { 'data':getLPPenalty, 'color':getColor, 'align':'center' },
 							'Slice': { 'data':getSlice, 'color':getColor, 'align':'center', 'display':'' },
 							'Round Shares': { 'data':getRoundShares, 'type':'linechart', 'width':'100%' },
