--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
 							'GH/s': { 'data':getPoolSpeed, 'align':'right' },
 							'Round<br>Time': { 'data':getRoundDuration, 'align':'center'},
 							'Payout': { 'data':getPayout, 'color':getColor, 'align':'center' },
-							'Efficiency': { 'data':getEfficiency, 'color':getColor, 'align':'center' },
-							'ThrPenalty': { 'data':getPenalty, 'color':getColor, 'align':'center' },
-							'LP Penalty': { 'data':getLPPenalty, 'color':getColor, 'align':'center' },
+							'Eff.': { 'data':getEfficiency, 'color':getColor, 'align':'center' },
+							'ThrPnlty': { 'data':getPenalty, 'color':getColor, 'align':'center' },
+							'LP-Pnlty': { 'data':getLPPenalty, 'color':getColor, 'align':'center' },
 							'Slice': { 'data':getSlice, 'color':getColor, 'align':'center', 'display':'' },
 							'Round Shares': { 'data':getRoundShares, 'type':'linechart', 'width':'100%' },
 							'Role String' : { 'data':getRoleString, 'display':'none' }
