Make web interface hide disabled pools by default

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 			<span style="background-color:yellow;width:20px;height:20px;">&nbsp;&nbsp;</span> Info
 			<span style="background-color:green;width:20px;height:20px;">&nbsp;&nbsp;</span> Mine
 			<form>
-				<input type="checkbox" id="show_role_disabled" name="show_role" value="disabled" checked="true" onclick="javascript:update()" />Show Disabled Pools 
+				<input type="checkbox" id="show_role_disabled" name="show_role" value="disabled" onclick="javascript:update()" />Show Disabled Pools 
 				<input type="checkbox" id="show_role_info" name="show_role" value="info" checked="true" onclick="javascript:update()" />Show Info Pools
 			</form>
 		</span>
