Worker sorting by username alpha on stats page by TenthReality

--- a/index.html
+++ b/index.html
@@ -513,7 +513,10 @@
 							"Shares": { 'data':getUserShares, 'align':'center' },
 							"Rejects": { 'data':getUserRejects, 'align':'center' },
 							"Hashrate": { 'data':getUserHashrate, 'align':'center' }  
-						}
+						},
+						function(c,d){
+							return c > d;
+						},""
 					);
 					
 				});
