Don't show users we haven't seen and have time 0

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
 			}
 			
 			function getUserTime(payload, user, key){
+                if(user['last'] == 0){
+                    return 'Not Seen This Session';
+                }
 				var newDate = new Date(user['last']*1000);
 			    if (newDate != null) {
 				    dateString = newDate.toLocaleString();
