--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 			function getLPPenalty(payload, srv) {
 				var penalty = 0.00
-				if (srv['lp_penalty'] && srv['lp_penalty'] > 0) {
+				if (srv['lp_penalty']) {
 					 penalty = parseFloat(srv['lp_penalty']);
 				}
 				var penalty_html = "<a href='#' onFocus='this.blur();' onClick=\"setLPPenalty('"
