Update webpage title to "LP Workbench"

--- a/plugins/lpworkbench/lpworkbench.html
+++ b/plugins/lpworkbench/lpworkbench.html
@@ -46,7 +46,7 @@
             }
                 
         </style>
-            <title>bitHopper info</title>
+            <title>LP Workbench</title>
             <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
             <script type="text/javascript" src="http://omnipotent.net/jquery.sparkline/1.6/jquery.sparkline.min.js"></script>
             <script type="text/javascript">
