--- a/plugins/lpworkbench/lpworkbench.html
+++ b/plugins/lpworkbench/lpworkbench.html
@@ -115,30 +115,37 @@
                 function getBlockTimings(payload, block, key) {
                     var h = "";
                     for (blockHash in block) {
-                        h += "<table class='none;' id='table_"+blockHash+"'>";
-                        for (pool in block[blockHash]) {
-                            if (pool != "_owner" && pool != '_time' && pool != '_verified') {
-                                h += "<th>" + pool + "</th>";                                           
-                            }
-                        }
-                        h += "<tr>";
                         // find owner
                         var owner = '';
                         for (pool in block[blockHash]) {
-                            if (pool == "_owner") {
+                            if (pool == "_verified") {
                                 owner = block[blockHash][pool];
                                 break;
                             }
-                        }
-                        var base_timing = parseFloat(block[blockHash][owner]);                             
-                        for (pool in block[blockHash]) {
-                            if (pool != "_owner" && pool != "_time" && pool != "_verified") {
-                                var delta = parseFloat(block[blockHash][pool]) - base_timing;
-                                h += "<td>" + (delta).toFixed(4) + "</td>";
+                            if (pool == "_owner") {
+                                owner = block[blockHash][pool];                                
                             }
                         }
-                        h += "</tr>";
-                        h += "</table>";
+                        var base_timing = parseFloat(block[blockHash][owner]);
+                        if (base_timing != 0 && block[blockHash][owner]) {
+                            h += "<table class='none;' id='table_"+blockHash+"'>";
+                            for (pool in block[blockHash]) {
+                                if (pool != "_owner" && pool != '_time' && pool != '_verified') {
+                                    h += "<th>" + pool + "</th>";                                           
+                                }
+                            }
+                            h += "<tr>";
+                            for (pool in block[blockHash]) {
+                                if (pool != "_owner" && pool != "_time" && pool != "_verified") {
+                                    var delta = parseFloat(block[blockHash][pool]) - base_timing;
+                                    h += "<td>" + (delta).toFixed(4) + "</td>";
+                                }
+                            }
+                            h += "</tr>";
+                            h += "</table>";
+                        } else {
+                            h = 'N/A';
+                        }
                         return h;                       
                     }                                            
                 }
@@ -373,7 +380,7 @@
                 
                 function getLPPenalty(payload, srv) {
                         var penalty = 0.00
-                        if (srv['lp_penalty'] && srv['lp_penalty'] > 0) {
+                        if (srv['lp_penalty']) {
                                  penalty = parseFloat(srv['lp_penalty']);
                         }
                         var penalty_html = "<a href='#' onFocus='this.blur();' onClick=\"setLPPenalty('"
