--- a/plugins/lpworkbench/lpworkbench.html
+++ b/plugins/lpworkbench/lpworkbench.html
@@ -71,7 +71,7 @@
                 function getBlock(payload, block, key) {
                         var h = ""                        
                         for (blockHash in block) {
-                            h += "<a href='http://pident.artefact2.com/block/"+ blockHash + "' target='_pident'>";
+                            h += "<a href='http://pi.uk.com/bitcoin/block-index/"+ blockHash "'>";
                             h += blockHash + "</a>";
                             return h;
                         }                        
