Edited plugins/lpworkbench/lpworkbench.html via GitHub

--- a/plugins/lpworkbench/lpworkbench.html
+++ b/plugins/lpworkbench/lpworkbench.html
@@ -71,7 +71,7 @@
                 function getBlock(payload, block, key) {
                         var h = ""                        
                         for (blockHash in block) {
-                            h += "<a href='http://pi.uk.com/bitcoin/search/"+ blockHash "'>";
+                            h += "<a href='http://pi.uk.com/bitcoin/search/"+ blockHash + "' target='_pident'>";
                             h += blockHash + "</a>";
                             return h;
                         }                        
