--- a/index.html
+++ b/index.html
@@ -77,14 +77,8 @@
 					return "N/A";
 				}
 
-				switch (srv['role'])
-				{
-					case 'mine_ixc': diff = payload['ixc_difficulty']; break;
-					case 'mine_i0c': diff = payload['i0c_difficulty']; break;
-					case 'mine_nmc': diff = payload['nmc_difficulty']; break;
-					case 'mine_scc': diff = payload['scc_difficulty']; break;
-					default: diff = payload['difficulty']; break;
-				}
+				diff = payload["diffs"][srv["role"].substring(5,8)];
+				if (diff == undefined) { diff = payload["diffs"]["btc"]; }
 
 				return numberWithCommas(shares)
 					+ "<br>"
